CH-282 make the samples application as statefulset
